2009-12-16: 1.21.7:
fillPeaks/getPeaks :  fix for R 2.11.0 :  weighted.mean() results in NA (not NaN) for zero weights
   (R 2.11.0 changelog: "...Zero weights are handled specially so an infinite value with zero weight does not force an NaN result.")

2009-11-30: 1.21.6:
Parameter unification: "massrange" replaced by "mzrange" and "timerange" replaced by "rtrange", for all xcms functions
R/xcmsRaw.R: added plotEIC()

2009-11-27: 1.21.5:
Added error messages for cases where the user specifies the step and/or method
parameters differently in the two ways they can be given to xcmsSet()

2009-11-25: 1.21.4: 
Fixed a dimension problem in collect() for MS2

2009-11-13: 1.21.3: 
added a check for (un)grouped xcmsSet to groupval() 
findmzROI shows scan number in case of errors
clarified manpage for diffreport, anova section

2009-11-08: 1.21.2: 
R/xcmsSet.R: added peakTable()

2009-10-28: 1.21.1: 
added a check for grouped xcmsSet with NA values (i.e. without fillPeaks()) to diffreport() 

2009-10-11: 1.18.4
group.nearest: fixed/added calculation of peaks-per-sampclass, 
               resolving problem in retcor() reported by Daniel Maturana

2009-07-17: 1.18.2
fixed calculation of specNoise() for 1-point spectra in xcmsRaw.R

2009-07-17: 1.18.1
findPeaks.centWave: fixed missing mzCenter.* assignment, when fitgauss=T is used

2009-08-04: 1.18.0
fillPeaks/getPeaks: fixed bug introduced with 1.17.9's bugfix, that filled in zero intensities

2009-07-17: 1.17.9
findPeaks.centWave: narrow down peak rt boundaries by skipping zeros
fillPeaks/getPeaks: fixed problem with nonexisting retention times due to retcor(), 
                    fill in zero instead of NaN (which breaks diffreport), but print a warning

2009-06-22: 1.17.8
findPeaks.centWave: Optimizations for OrbitTrap/FTICR data, different functions can be used for calculating 
                    the m/z center of the feature: mzCenter.{mean,wMean,apex,wMeanApex3,meanApex3}