@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.7
-Date: 2009-12-16
+Version: 1.21.8
+Date: 2009-12-18
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
